[gd_scene load_steps=10 format=3 uid="uid://bbg2yy2s1p07k"]

[ext_resource type="Script" path="res://core/actors/workshop/scripts/gui_recipe_requirements.gd" id="1_47pp5"]
[ext_resource type="Texture2D" uid="uid://b61iaap3vr1hb" path="res://assets/2d/icons/keyboard/Keyboard_White_E.png" id="2_55h25"]
[ext_resource type="Texture2D" uid="uid://c8eht8shwjxqx" path="res://assets/2d/icons/xbox/XboxOne_A.png" id="3_4c8ks"]

[sub_resource type="ViewportTexture" id="ViewportTexture_bf5mp"]
viewport_path = NodePath("Texture/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mim5q"]
resource_local_to_scene = true
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_bf5mp")
disable_receive_shadows = true
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_j7c7i"]
size = Vector2(2, 1)

[sub_resource type="Animation" id="Animation_i3yju"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/SubViewport/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b27sb"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/SubViewport/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2uhs"]
_data = {
"fade_in": SubResource("Animation_i3yju"),
"fade_out": SubResource("Animation_b27sb")
}

[node name="GUIRecipeRequirements" type="Node3D"]
script = ExtResource("1_47pp5")

[node name="Texture" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_mim5q")
mesh = SubResource("QuadMesh_j7c7i")

[node name="SubViewport" type="SubViewport" parent="Texture"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(250, 80)
size_2d_override_stretch = true

[node name="Control" type="Control" parent="Texture/SubViewport"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(250, 80)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Texture/SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="HBoxContainer" parent="Texture/SubViewport/Control"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="HBoxContainer" parent="Texture/SubViewport/Control/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="IconKeyboard" type="TextureRect" parent="Texture/SubViewport/Control/Content"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_55h25")
expand_mode = 1
stretch_mode = 5

[node name="IconXboxOne" type="TextureRect" parent="Texture/SubViewport/Control/Content"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_4c8ks")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f2uhs")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
